--- a/crates/tauri-plugin-drag/Cargo.toml
+++ b/crates/tauri-plugin-drag/Cargo.toml
@@ -8,7 +8,7 @@ rust-version = "1.60"
 license = { workspace = true }
 
 [dependencies]
-tauri = "1"
+tauri = "2.0.0-beta"
 serde = "1"
 serde_json = "1"
 thiserror = "1"
