--- a/examples/tauri-dragout/Cargo.toml
+++ b/examples/tauri-dragout/Cargo.toml
@@ -5,15 +5,10 @@ publish = false
 edition = "2021"
 
 [build-dependencies]
-tauri-build = "1"
+tauri-build = "2.0.0-beta"
 
 [dependencies]
-tauri = { version = "1", features = [
-  "path-all",
-  "window-create",
-  "window-data-url",
-  "window-close",
-] }
+tauri = { version = "2.0.0-beta", features = [] }
 tauri-plugin-drag-as-window = { path = "../../crates/tauri-plugin-drag-as-window/", features = [
   "global-js",
 ] }
