--- a/examples/tauri/Cargo.toml
+++ b/examples/tauri/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "tauri-app"
+name = "tauri-drag-app"
 version = "0.0.0"
 publish = false
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [build-dependencies]
-tauri-build = "2.0.0-beta"
+tauri-build = { version = "2.0.0-beta", features = [] }
 
 [dependencies]
 tauri = { version = "2.0.0-beta", features = [] }
